--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 <body>
 <section class="section">
     <div class="container">
-        <h1 class="title">Chuck Norris Jokes</h1>
-        <p>Reload for another joke!</p>
-
-        <div class="content" id="chuck-norris">
+        <h1 class="title">Simpsons Quotes</h1>
+        <p>Reload for another quote!</p>
+        <div class="content" id="simpson">
         </div>
     </div>
 
@@ -30,7 +29,30 @@
 <!-- We need to load axios first! -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
 <script>
+    // This function loads pokemon data from the Pokemon API
+    function fetchSimpsonJSON() {
+        // Feel free to download this HTML and edit it, to use another Pokemon ID
+        const num = 1;
+        const url = `https://thesimpsonsquoteapi.glitch.me/quotes`;
+        axios.get(url)
+            .then(function(response) {
+                return response.data; // response.data instead of response.json() with fetch
+            })
+            .then(function(simpson) {
+                console.log('data decoded from JSON:', simpson);
 
+                // Build a block of HTML
+                const simpsonHtml = `
+        <p><strong>${simpson[0].quote}</strong></p>
+        <p><strong>${simpson[0].character}</strong></p>
+        <img src="${simpson[0].image}" />
+        <p>${simpson[0].characterDirection}</p>
+      `;
+                document.querySelector('#simpson').innerHTML = simpsonHtml;
+            });
+    }
+
+    fetchSimpsonJSON();
 </script>
 </body>
 
