--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p><strong>${simpson[0].quote}</strong></p>
         <p><strong>${simpson[0].character}</strong></p>
         <img src="${simpson[0].image}" />
-        <!--<p>${simpson[0].characterDirection}</p>-->
+        <p>${simpson[0].characterDirection}</p>
       `;
                 document.querySelector('#simpson').innerHTML = simpsonHtml;
             });
